# pimpl

./: .gitignore  .travis.yml  CMakeLists.txt  Jamroot.jam  README.md  index.html  makefile  pimpl.hpp
cmake/: HunterGate.cmake
detail/: pimpl_constructors.hpp
doc/: 00_impl_ptr.qbk  00_pimpl.qbk  01_introduction.qbk  02_getting_started.qbk  02_the_basics.qbk  03_getting_started.qbk  03_value_semantics.qbk  04_behind_interface.qbk  04_value_semantics.qbk  05_behind_interface.qbk  05_implementation_management.qbk  06_null.qbk  07_construction.qbk  07_proxy.qbk  08_null.qbk  09_customization.qbk  09_deep_const.qbk  10_onstack_policy.qbk  11_custom_policy.qbk  11_customization.qbk  12_custom_allocator.qbk  12_inplace_policy.qbk  12_onstack_policy.qbk  20_applications.qbk  21_delegating_constructors.qbk  22_singleton.qbk  22_use_cases.qbk  23_dictionary.qbk  24_internal_polymorphism.qbk  25_dynamic_polymorphism.qbk  26_lazy_instantiation.qbk  29_applications_end.qbk  81_index.qbk  97_bibliography.qbk  97_references.qbk  98_acknowledgments.qbk  99_reference.xml  Jamfile.v2  generate-html.sh  git-help.txt  (+5 more)
doc/html/: _internal_impl_ptr.html  boost_impl_ptr_detail.html  impl_ptr.html  index.html  reference.html  standalone_HTML.manifest
doc/html/_internal_impl_ptr/: base.html
doc/html/boost/: is_impl__idm45003759060864.html  is_impl__idm45111600087488.html  is_impl__idm45114574707488.html  is_impl__idm45194283176128.html  is_impl__idm45270497865120.html  is_impl__idm45693530609744.html  is_impl__idm45725614779760.html  is_impl__idm45821989678224.html  is_impl__idm45831667480464.html  is_impl__idm45890314612688.html  is_impl__idm46078522699360.html  is_impl__idm46288418497072.html  is_impl__idm46345737442080.html  is_impl_idm138794060334416.html  is_impl_idm138881368728336.html  is_impl_idm139079387274096.html  is_impl_idm139215877336880.html  is_impl_idm139383069750016.html  is_impl_idm139476520123008.html  is_impl_idm139660165221024.html  is_impl_idm139710446676288.html  is_impl_idm139828130593344.html  is_impl_idm139885910461536.html  is_impl_idm140045734973456.html  is_impl_idm140139025448640.html  is_impl_idm140640732199008.html  is_impl_ptr.html
doc/html/boost_impl_ptr_detail/: base.html
doc/html/detail/: basic_inplace.html  copied.html  in_place_type.html  inplace_allocator.html  local_traits.html  onstack.html  shared.html  static_traits.html  unique.html
doc/html/detail/onstack/: allocator.html
doc/html/header/: impl_ptr_hpp.html
doc/html/header/detail/: inplace_hpp.html  onstack_hpp.html  shared_hpp.html  unique_hpp.html
doc/html/impl_ptr/: acknowledgements.html  applications.html  applications_of_the_pimpl_idiom.html  base.html  behind_the_interface.html  bibliography.html  construction_and_book_null.html  construction_and_impl_ptr_book_n.html  construction_and_impl_ptr_null.html  construction_and_null.html  construction_and_pimpl_null.html  custom_allocator.html  custom_policy.html  customization.html  deep_const.html  easy_pimpl_with_shared_ownership.html  getting_started.html  getting_started_pimpl_with_share.html  in_place_implementation_policy.html  on_stack_implementation_policy.html  pimpl_with_exclusive_ownership_p.html  pimpl_with_value_semantics.html  references.html  the_basics.html
doc/html/impl_ptr/applications/: extendible_unique_entry_collecti.html  internal_implementation_only_run.html  lazy_instantiation_optimization.html  non_extendible_unique_entry_coll.html  run_time_polymorphic_class_hiera.html  singleton.html
doc/html/impl_ptr/applications_of_the_pimpl_idiom/: derived_classes_overriding_the_i.html  derived_classes_overriding_the_p.html  extendible_dictionary.html  extendible_unique_entry_collecti.html  internal_implementation_only_run.html  lazy_instantiation_optimization.html  non_extendible_dictionary.html  non_extendible_unique_entry_coll.html  run_time_polymorphic_class_hiera.html  singleton.html
doc/html/impl_ptr/customization/: custom_allocator.html  (+2 more)
doc/html/impl_ptr_policy/: always_storage.html  copied.html  inplace.html  inplace_allocator.html  onstack.html  shared.html  storage.html  unique.html
doc/html/index/: s03.html  s05.html  s06.html  s08.html  s09.html  s10.html  s11.html  s12.html  s13.html  s14.html
doc/html/pimpl/: acknowledgements.html  applications_of_the_pimpl_idiom.html  behind_the_interface.html  construction_and_pimpl_null.html  customization.html  deep_const.html  getting_started.html  pimpl_null.html  pimpl_the_proxy.html  pimpl_with_value_semantics.html  references.html  the_basics.html
doc/html/the_boost_convert_library/: acknowledgements.html
doc/html/the_boost_pimpl_library/: acknowledgements.html  applications_of_the_pimpl_idiom.html  behind_the_interface.html  getting_started.html  implementation_and_implementation_management.html  implementation_management.html  pimpl__null__.html  pimpl__null___and_strongly_exception_safe_constructors.html  pimpl_with___value_semantics_.html  pimpl_with_value_semantics.html  references.html  the_pimpl_idiom_use_cases.html  the_user_perspective.html
doc/html/the_pimpl/: acknowledgements.html  applications_of_the_pimpl_idiom.html  behind_the_interface.html  customization.html  getting_started.html  implementation_management.html  pimpl__null__.html  pimpl_t___null__.html  pimpl_the_proxy.html  pimpl_with_value_semantics.html  references.html  the_basics.html
include/: impl_ptr.hpp  pimpl.hpp  safebool.hpp  wip.hpp
include/boost/pimpl/: pimpl.hpp
include/detail/: copied.hpp  copied_au.hpp  cow.hpp  detail.hpp  first.hpp  inplace.hpp  is_allocator.hpp  onstack.hpp  optional.hpp  pimpl_constructors.hpp  safebool.hpp  shared.hpp  single.hpp  traits.hpp  unique.hpp  unique_au.hpp
test/: CMakeLists.txt  Jamfile.v2  allocator.hpp  impl.cpp  impl_always_inplace.cpp  impl_copied.cpp  impl_inplace.cpp  impl_onstack.cpp  impl_poly.cpp  impl_shared.cpp  impl_unique.cpp  main.cpp  makefile  old_test_pimpl.cpp  old_test_pimpl.hpp  old_test_pimpl_implementation.cpp  pimpl_test.cpp  pimpl_test.hpp  pimpl_test_implementation.cpp  sugar.cmake  test.hpp
(+49 files in other folders)
